stateDiagram-v2
    direction LR
    ALONE: slow_breathe
    NOTICING: normal_breathe [min 400ms]
    NEUTRAL: slow_circle [min 700ms]
    CONTENT: wave_packet_am
    EXCITED: wave_packet_fm
    SAD: grab_object
    ANGRY: grab_object
    YES: yes + yes sound [min 600ms]
    NO: no + no sound [min 600ms]
    [*] --> ALONE
    ALONE --> NOTICING: r2 p3 x1 - Face == 1 > 1 second
    NOTICING --> NEUTRAL: r3 p3 x2 - Attention == 1 for > 1.5 seconds
    EXCITED --> NEUTRAL: r4 p3 x1 - Neutral == 1 for > 1 second & Face == 1
    CONTENT --> NEUTRAL: r5 p3 x0 - Neutral == 1 for > 1 second & Face == 1
    SAD --> NEUTRAL: r6 p3 x0 - Neutral == 1 for > 1 second & Face == 1
    ANGRY --> NEUTRAL: r7 p3 x1 - Neutral == 1 for > 1 second & Face == 1
    ANY --> CONTENT: r8 p3 x1 - Content == 1 for > 1.5 seconds & Face == 1
    ANY --> EXCITED: r9 p3 x2 - Excited == 1 for > 1.5 seconds & Face == 1
    ANY --> SAD: r10 p3 x1 - Sad == 1 for > 1.5 seconds & Face == 1
    ANY --> ANGRY: r11 p3 x2 - Angry == 1 for > 1.5 seconds & Face == 1
    ANY --> YES: r12 p1 x2 - Yes == 1 for > 500 ms
    ANY --> NO: r13 p1 x2 - No == 1 is detected for > 500 ms
    YES --> PREV: r14 p3 x2 - Return to state machine was in before YES after min ...
    NO --> PREV: r15 p3 x2 - Return to state machine was in before NO after min d...
    ANY --> ALONE: r16 p2 x0 - Face == 0 for > 1.5 seconds
    ANY --> NOTICING: r17 p2 x1 - Face == 1 > 1.5 seconds and Attention == 0 for > 1.5...
    ANY: any state, see the row for its exclusions
    PREV: whichever state it came from
